--- a/polls/templates/polls/login.html
+++ b/polls/templates/polls/login.html
@@ -16,9 +16,12 @@
     <link rel="stylesheet" href="/style.css">
     <title>Bootstrap 4 Login/Register Form</title>
 </head>
+
+
 <body>
     <div id="logreg-forms">
-        <form class="form-signin">
+        <form class="form-signin" method="POST">
+            {% csrf_token %}
             <h1 class="h3 mb-3 font-weight-normal" style="text-align: center"> Sign in</h1>
             <div class="social-login">
                 <button class="btn facebook-btn social-btn" type="button"><span><i class="fab fa-facebook-f"></i> Sign in with Facebook</span> </button>
@@ -41,7 +44,11 @@
                 <a href="#" id="cancel_reset"><i class="fas fa-angle-left"></i> Back</a>
             </form>
 
-            <form action="/signup/" class="form-signup">
+
+
+
+            <form action="/signup/" class="form-signup" method="POST">
+                {% csrf_token %}
                 <div class="social-login">
                     <button class="btn facebook-btn social-btn" type="button"><span><i class="fab fa-facebook-f"></i> Sign up with Facebook</span> </button>
                 </div>
